=== HEAD

* Make ILIKE work correctly on Microsoft SQL Server if database/column collation is case sensitive (jfirebaugh) (#398)

* When starting a new dataset graph, assume existing selection is the columns to select from the current table (jeremyevans)

* Allow specifying nanoseconds and offsets when converting a hash or array to a timestamp (jeremyevans, jfirebaugh) (#395)

* Improve performance when converting Java types to ruby types in the jdbc adapter (jeremyevans, jfirebaugh) (#395)

* Fix tinytds adapter if DB.identifier_output_method = nil (jeremyevans)

* Explicitly order by the row number column when emulating offsets (jfirebaugh) (#393)

* Fix Dataset#graph and #eager_graph modifying the receiver if the receiver is already graphed (jeremyevans) (#392)

* Change dataset literalization to an append-only-all-the-way-down design (jeremyevans)

=== 3.29.0 (2011-11-01)

* Allow Model.dataset_module to take a Module instance (jeremyevans)

* Apply Model.[] optimization in more cases (jeremyevans)

* Fix Model.[] optimization when dataset uses identifier_input_method different than database (jeremyevans)

* Work around pragma bug on jdbc/sqlite when emulating alter table support (jeremyevans)

* Database#<< and Dataset#<< now return self so they can be safely chained (jeremyevans)

* Fully support using an aliased table name as the :join_table option for a many_to_many association (jeremyevans)

* Make like case sensitive on SQLite and Microsoft SQL Server (use ilike for case insensitive matching) (jeremyevans)

* Add Database#extend_datasets for the equivalent of extending of the Database object's datasets with a module (jeremyevans)

* Speed up Dataset #map, #to_hash, and related methods if an array of symbols is given (jeremyevans)

* Add Database#dataset_class for modifying the class used for datasets for a single Database object (jeremyevans)

* Plugins that override Model.load should be modified to override Model.call instead (jeremyevans)
