@@ -718,6 +718,10 @@ module Sequel
         # :eager_loader_key :: A symbol for the key column to use to populate the key hash
         #                      for the eager loader.
         # :extend :: A module or array of modules to extend the dataset with.
+        # :graph_alias_base :: The base name to use for the table alias when eager graphing.  Defaults to the name
+        #                      of the association.  If the alias name has already been used in the query, Sequel will create
+        #                      a unique alias by appending a numeric suffix (e.g. alias_0, alias_1, ...) until the alias is
+        #                      unique.
         # :graph_block :: The block to pass to join_table when eagerly loading
         #                 the association via +eager_graph+.
         # :graph_conditions :: The additional conditions to use on the SQL join when eagerly loading
@@ -822,6 +826,7 @@ module Sequel
           opts[:graph_join_type] ||= :left_outer
           opts[:order_eager_graph] = true unless opts.include?(:order_eager_graph)
           conds = opts[:conditions]
+          opts[:graph_alias_base] ||= name
           opts[:graph_conditions] = conds if !opts.include?(:graph_conditions) and Sequel.condition_specifier?(conds)
           opts[:graph_conditions] = opts.fetch(:graph_conditions, []).to_a
           opts[:graph_select] = Array(opts[:graph_select]) if opts[:graph_select]
@@ -1763,7 +1768,7 @@ module Sequel
         # *associations :: any associations dependent on this one
         def eager_graph_association(ds, model, ta, requirements, r, *associations)
           assoc_name = r[:name]
-          assoc_table_alias = ds.unused_table_alias(assoc_name)
+          assoc_table_alias = ds.unused_table_alias(r[:graph_alias_base])
           loader = r[:eager_grapher]
           if !associations.empty?
             if associations.first.respond_to?(:call)
